client/src/App.scss
@import 'variables';
@import url('https://fonts.googleapis.com/css?family=Bungee|Itim|Ubuntu');

#root {
  display: flex;

  main {
    flex: 3;
    order: 2;
    height: 100vh;
    overflow-y: auto;
  }

  @media only screen and (max-width: 768px) {
    main {
      flex: 5;
    }
  }
}

.App {
  text-align: center;
  display: flex;
  overflow-y: hidden;
}

body {
  background-color: $chowster-red;
}

.dropdown-item:hover {
  background-color: transparent;
}

.fake-link {
  cursor: pointer;
}

.chowster-font {
  font-family: 'Bungee', cursive;
  color: black;
  text-shadow: rgb(255, 255, 255) 3px 0px 0px,
    rgb(255, 255, 255) 2.83487px 0.981584px 0px,
    rgb(255, 255, 255) 2.35766px 1.85511px 0px,
    rgb(255, 255, 255) 1.62091px 2.52441px 0px,
    rgb(255, 255, 255) 0.705713px 2.91581px 0px,
    rgb(255, 255, 255) -0.287171px 2.98622px 0px,
    rgb(255, 255, 255) -1.24844px 2.72789px 0px,
    rgb(255, 255, 255) -2.07227px 2.16926px 0px,
    rgb(255, 255, 255) -2.66798px 1.37182px 0px,
    rgb(255, 255, 255) -2.96998px 0.42336px 0px,
    rgb(255, 255, 255) -2.94502px -0.571704px 0px,
    rgb(255, 255, 255) -2.59586px -1.50383px 0px,
    rgb(255, 255, 255) -1.96093px -2.27041px 0px,
    rgb(255, 255, 255) -1.11013px -2.78704px 0px,
    rgb(255, 255, 255) -0.137119px -2.99686px 0px,
    rgb(255, 255, 255) 0.850987px -2.87677px 0px,
    rgb(255, 255, 255) 1.74541px -2.43999px 0px,
    rgb(255, 255, 255) 2.44769px -1.73459px 0px,
    rgb(255, 255, 255) 2.88051px -0.838247px 0px;
}

.landing-page {
  font-size: 1rem;
}

#welcome {
  margin-top: 25vh;
  margin-bottom: 15px;
}

.ubuntu {
  font-family: 'Ubuntu', sans-serif;
}

.landing-page a {
  color: #84919e;
  text-decoration: none;
}

.landing-page a:hover {
  color: #1f2020;
  text-decoration: none;
  cursor: pointer;
}

.Post img {
  max-height: 5rem;
}

@media only screen and (max-width: $breakpoint-sm) {
  .landing-page {
    font-size: 1.2rem;
  }

  .hide-on-sm {
    display: none;
  }
}

@media only screen and (max-width: $breakpoint-md) {
  .landing-page {
    font-size: 1.4rem;
  }

  .hide-on-md {
    display: none;
  }
}

@media only screen and (min-width: $breakpoint-md) {
  .hide-on-lg {
    display: none;
  }
}

@media only screen and (min-width: $breakpoint-lg) {
  .landing-page {
    font-size: 1.6rem;
  }
}

.flex {
  display: flex;

  .right {
    margin-left: auto;
  }
}

